# this-and-that

./: .gitignore  LICENSE  README.md
01-build-systems/gn-ninja/ad-hoc/: .gn  BUILD.gn  conanfile.txt
01-build-systems/gn-ninja/ad-hoc/experiments/using-uvw/: BUILD.gn  main.cc
01-build-systems/gn-ninja/simple/: .gn  BUILD.gn
01-build-systems/gn-ninja/simple/src/app/: BUILD.gn  main.cc
01-build-systems/gn-ninja/simple/src/lib/: BUILD.gn  simple-stats.cc
01-build-systems/meson-ninja/: native.ini
01-build-systems/meson-ninja/ad-hoc/experiments/using-uvw/: meson.build
01-build-systems/meson-ninja/simple/: meson.build  native.ini
01-build-systems/meson-ninja/simple/src/app/: main.cc  meson.build
01-build-systems/meson-ninja/simple/src/lib/: meson.build  simple-stats.cc  simple-stats.hh
01-build-systems/notes/: 01-cmake-meson-and-ninja.md  02-gn-and-ninja.md  03-meson-and-ninja-take-2.md  04-gn-ninja-conan.md  05-gn-ninja-conan-take-2.md  06-gn-ninja-conan-take-3.md  cmake-meson-and-ninja.md  gn-and-ninja.md  meson-and-ninja-take-2.md
02-dependency-analysis/notes/: research-links.md
03-modern-C++/notes/: concepts-code-samples.md  designing-for-the-long-term.md  research-links.md
03-modern-C++/snippets/: crtp-using-concept.cpp  describe.hh
04-infrastructure-as-code/notes/: research-links.md
05-modern-css/notes/: research-links.md
06-ddd-eda/notes/: research-links.md
07-zig-zag/notes/: 01-prologue.md  02-taste-of-zig.md
08-ai-ml/notes/: research-links.md
09-authz/notes/: research-links.md
10-islands-of-web/notes/: research-links.md  sqlite3.md
11-rsc/parcel/rsc-examples/: README.md  package-lock.json  package.json
11-rsc/parcel/rsc-examples/examples/client/: README.md  package.json
11-rsc/parcel/rsc-examples/examples/client/client/: App.tsx  index.html  index.tsx
11-rsc/parcel/rsc-examples/examples/client/server/: Counter.tsx  RSC.css  RSC.tsx  server.tsx
11-rsc/parcel/rsc-examples/examples/server/: README.md  package.json
11-rsc/parcel/rsc-examples/examples/server/src/: Dialog.tsx  TodoCreate.tsx  TodoDetail.tsx  TodoItem.tsx  TodoList.tsx  Todos.tsx  actions.ts  client.tsx  server.tsx
11-rsc/parcel/rsc-examples/examples/static/: README.md  package.json
11-rsc/parcel/rsc-examples/examples/static/components/: Nav.tsx  client.tsx  style.css
11-rsc/parcel/rsc-examples/examples/static/pages/: Index.tsx  Other.tsx
11-rsc/remix/my-remix-app/: package-lock.json  package.json
11-rsc/rr/addr_book/: package-lock.json  package.json
11-rsc/rr/addr_book/app/: root.tsx  routes.ts
11-rsc/rr/addr_book/app/layouts/: sidebar.tsx
11-rsc/rr/addr_book/app/routes/: about.tsx  contact.tsx  destroy-contact.tsx  edit-contact.tsx
11-rsc/waku-todo/: package-lock.json  package.json
