import("//build/common/conan.gni")
import("//build/common/pkg_config.gni")

conan_install("install_third_party_packages") {
  conanfile = "//conanfile.txt"
  deploy_dir = "//third-party"
}

pkg_config("target_defaults") {
  # project root releative path to find *.pc files of the dependencies
  pkg_deps_path = "//third-party"  # project root absolute

  # order matters (if the packages have dependencies)
  pkg_deps = [
    "libuv-static",
    "uvw",
  ]
}

executable("main") {
  sources = [ "main.cc" ]
  configs += [ ":target_defaults" ]
}
