executable("app-static") {
  sources = [ "main.cc" ]
  deps = [ "//src/lib:ss-static" ]
  include_dirs = [ "../lib" ]

  defines = [ "STATS_API_IS_DLL=0" ]
}

executable("app-shared") {
  sources = [ "main.cc" ]
  deps = [ "//src/lib:ss-shared" ]
  include_dirs = [ "../lib" ]

  defines = [ "STATS_API_IS_DLL=1" ]
}
